--- a/roles/unwind/tasks/main.yml
+++ b/roles/unwind/tasks/main.yml
@@ -1,6 +1,6 @@
-# openbsd.unwind/tasks/main.yaml
-
-- name: configure dhclient.conf
+# SPDX-License-Identifier: ISC
+---
+- name: Configure dhclient.conf
   ansible.builtin.template:
     src: etc/dhclient.conf.j2
     dest: /etc/dhclient.conf
@@ -8,7 +8,7 @@
     group: wheel
     mode: 0644
 
-- name: start and enable unwind
+- name: Start and enable unwind
   ansible.builtin.service:
     name: unwind
     state: started
