--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,6 +17,7 @@ on:
       - roles/**/*.md
       - roles/**/*.yml
       - site-*.yml
+      - tox.ini
   push:
     paths:
       - .github/workflows/lint.yml
@@ -31,6 +32,7 @@ on:
       - roles/**/*.md
       - roles/**/*.yml
       - site-*.yml
+      - tox.ini
   workflow_dispatch:
 
 jobs:
