--- a/roles/mail/defaults/main.yml
+++ b/roles/mail/defaults/main.yml
@@ -1,4 +1,6 @@
 # SPDX-License-Identifier: ISC
+#
+# Copyright (c) 2022 Johnathan C. Maudlin <jcmdln@gmail.com>
 ---
 mail_dkim_selector: "domain"
 mail_domain: "domain.tld"
