--- a/roles/mail/tasks/main.yml
+++ b/roles/mail/tasks/main.yml
@@ -1,4 +1,6 @@
 # SPDX-License-Identifier: ISC
+#
+# Copyright (c) 2022 Johnathan C. Maudlin <jcmdln@gmail.com>
 ---
 - name: Install required packages
   jcmdln.openbsd.pkg:
@@ -52,6 +54,7 @@
     owner: _dkimsign
     group: _dkimsign
     mode: 0600
+
 #
 # Dovecot
 #
