--- a/roles/vmm/tasks/main.yml
+++ b/roles/vmm/tasks/main.yml
@@ -1,4 +1,6 @@
 # SPDX-License-Identifier: ISC
+#
+# Copyright (c) 2022 Johnathan C. Maudlin <jcmdln@gmail.com>
 ---
 - name: Check dmesg for nested paging support
   ansible.builtin.raw: >-
