Switch to Poetry as the primary pkg manager

--- a/poetry.toml
+++ b/poetry.toml
@@ -2,5 +2,6 @@
 #
 # Copyright (c) 2022 Johnathan C. Maudlin <jcmdln@gmail.com>
 
-ansible-core
-netaddr
+[virtualenvs]
+in-project = true
+path = ".venv"
