Simplify actions/cache id

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -65,14 +65,14 @@ jobs:
 
       - name: Setup venv cache
         uses: actions/cache@v3
-        id: venv-${{ matrix.linter }}-${{ matrix.python }}-${{ matrix.os }}
+        id: venv
         with:
           key: venv-${{ matrix.linter }}-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
           path: .venv
 
       - name: Setup Tox cache
         uses: actions/cache@v3
-        id: tox-${{ matrix.linter }}-${{ matrix.python }}-${{ matrix.os }}
+        id: tox
         with:
           key: tox-${{ matrix.linter }}-${{ matrix.python }}-${{ matrix.os }}-${{ hashFiles('poetry.lock') }}
           path: .tox/${{ matrix.linter }}
