--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,18 +24,16 @@ netaddr = "^0.8"
 ansible-lint = "^6.8.7"
 
 [tool.poetry.group.bandit.dependencies]
-bandit = { version = "^1.7.4", extras = ["toml"] }
+bandit = { version = "^1.7.4" }
 importlib-metadata = { version = "*", python = "<3.8" }
-
-[tool.poetry.group.coverage.dependencies]
-coverage = "^6.4.2"
+tomli = { version = "*", python = "<3.11" }
 
 [tool.poetry.group.flake8.dependencies]
-black = "^22.6.0"
-flake8 = "^4.0.1"
+black = "^22.10.0"
+flake8 = "*"
 flake8-black = "^0.3.3"
 flake8-docstrings = "^1.6.0"
-flake8-isort = "^4.1.2"
+flake8-isort = "^5.0.3"
 isort = "^5.10.1"
 mccabe = "*"
 pycodestyle = "*"
@@ -43,21 +41,20 @@ pydocstyle = "*"
 pyflakes = "*"
 rope = "*"
 
+[tool.poetry.group.lsp]
+optional = true
 [tool.poetry.group.lsp.dependencies]
 pyls-flake8 = "^0.4.0"
 pyls-isort = "^0.2.2"
-pylsp-mypy = "^0.6.2"
-pylsp-rope = "^0.1.9"
+pylsp-mypy = "^0.6.3"
+pylsp-rope = "^0.1.10"
 python-lsp-black = "^1.2.1"
-python-lsp-server = { version = "^1.5.0", extras = ["all"] }
-
-[tool.poetry.group.pytest.dependencies]
-pytest = "^7.1.2"
+python-lsp-server = { version = "^1.6.0", extras = ["all"] }
 
 [tool.poetry.group.mypy.dependencies]
 mypy = ">=0.982"
-types-cryptography = "^3.3.23.1"
-types-pyyaml = "^6.0.7"
+types-cryptography = "*"
+types-pyyaml = "*"
 
 [tool.poetry.group.tox.dependencies]
 tox = "^3.25.0"
@@ -113,14 +110,7 @@ skip_install = true
 commands =
     poetry install --no-root --only ansible-lint
     poetry run ansible-lint --version
-    poetry run ansible-lint --offline \
-        roles/ \
-        site-check.yml \
-        site-dns.yml \
-        site-mail.yml \
-        site-pkg.yml \
-        site-syspatch.yml \
-        site-sysupgrade.yml
+    poetry run ansible-lint --offline roles/ site-*.yml
 
 [testenv:bandit]
 commands =
