--- a/inventory/vagrant.yml
+++ b/inventory/vagrant.yml
@@ -9,8 +9,5 @@ all:
     ansible_ssh_private_key_file: ".vagrant/machines/{{ inventory_hostname }}/libvirt/private_key"
     ansible_user: vagrant
 
-dns:
-  hosts: {}
-
 mail:
-  hosts: {}
+  ac-openbsd:
