Simplify "gitincludes" rules

--- a/.gitignore
+++ b/.gitignore
@@ -42,17 +42,9 @@
 !inventory/vagrant.yml
 !plugins/
 !plugins/modules/
-!plugins/modules/pkg.py
-!plugins/modules/syspatch.py
-!plugins/modules/sysupgrade.py
+!plugins/modules/*.py
 !requirements/
-!requirements/ansible-lint.txt
-!requirements/ansible.txt
-!requirements/bandit.txt
-!requirements/devel.txt
-!requirements/flake8.txt
-!requirements/mypy.txt
-!requirements/tox.txt
+!requirements/*.txt
 !roles/
 !roles/**/
 !roles/**/*.j2
