mail: Fix formatting issues; Update README

--- a/roles/mail/tasks/main.yml
+++ b/roles/mail/tasks/main.yml
@@ -24,7 +24,7 @@
     provider: selfsigned
 
 #
-# dkim
+# DKIM
 #
 
 - name: Ensure _dkimsign system user account exists
@@ -41,16 +41,19 @@
     group: _dkimsign
     mode: 0770
 
-- name: Generate RSA2048 dkim key
+- name: Generate RSA2048 dkim private key
   community.crypto.openssl_privatekey:
     path: /etc/mail/dkim/{{ mail_dkim_selector }}.private.key
     size: 2048
     type: RSA
+    owner: _dkimsign
+    group: _dkimsign
+    mode: 0600
 
-- name: Set owner of dkim key to _dkimsign
-  ansible.builtin.file:
-    path: /etc/mail/dkim/{{ mail_dkim_selector }}.private.key
-    state: file
+- name: Generate RSA2048 dkim public key
+  community.crypto.openssl_publickey:
+    path: /etc/mail/dkim/{{ mail_dkim_selector }}.public.key
+    privatekey_path: /etc/mail/dkim/{{ mail_dkim_selector }}.private.key
     owner: _dkimsign
     group: _dkimsign
     mode: 0600
@@ -68,10 +71,10 @@
   ansible.builtin.blockinfile:
     block: |
       dovecot:\
-      {{ '\t' }}:openfiles-cur=1024:\
-      {{ '\t' }}:openfiles-max=2048:\
-      {{ '\t' }}:tc=daemon:
-    marker: "# {mark} ANSIBLE MANAGED: jcmdln.openbsd.mail"
+      	:openfiles-cur=1024:\
+      	:openfiles-max=2048:\
+      	:tc=daemon:
+    marker: "# {mark} ANSIBLE MANAGED BLOCK: jcmdln.openbsd.mail"
     path: "/etc/login.conf"
 
 - name: Configure Dovecot
