--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,8 +8,8 @@
     "ms-python.vscode-pylance",
     "redhat.ansible",
     "redhat.vscode-yaml",
+    "samuelcolvin.jinjahtml",
     "tamasfe.even-better-toml",
-    "wayou.vscode-todo-highlight",
-    "samuelcolvin.jinjahtml"
+    "wayou.vscode-todo-highlight"
   ]
 }
