--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ version = "0.0.0"
 [tool.poetry.dependencies]
 python = "^3.8"
 # packages
-ansible-core = "^2.12"
+ansible-core = "^2.12.0"
 netaddr = "^0.8"
 
 [tool.poetry.group.ansible-lint.dependencies]
@@ -54,8 +54,11 @@ mypy = ">=0.982"
 types-cryptography = "*"
 types-pyyaml = "*"
 
+[tool.poetry.group.pip-audit.dependencies]
+pip-audit = "^2.4.8"
+
 [tool.poetry.group.tox.dependencies]
-tox = "^3.25.0"
+tox = "^4.0.0"
 
 #
 # Tools
@@ -90,6 +93,7 @@ envlist =
     bandit
     flake8
     mypy
+    pip-audit
 ignore_basepython_conflict = true
 isolated_build = true
 minversion = 3.20
@@ -137,4 +141,10 @@ commands =
     poetry install --no-root --only mypy
     poetry run mypy --version
     poetry run mypy {toxinidir}/plugins/modules/
+
+[testenv:pip-audit]
+commands =
+    poetry install --no-root --only pip-audit
+    poetry run pip-audit --version
+    poetry run pip-audit
 """
