--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,10 +40,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
+        os: [ubuntu-latest]
         python: ["3.9", "3.10", "3.11"]
 
-    name: ${{ matrix.python }}-${{ matrix.os }}
+    name: python${{ matrix.python }}-${{ matrix.os }}
     runs-on: ${{ matrix.os }}
 
     steps:
