--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,7 +41,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        python: ["3.9", "3.10", "3.11", "3.12-dev"]
+        python: ["3.9", "3.10", "3.11"]
 
     name: python${{ matrix.python }}-${{ matrix.os }}
     runs-on: ${{ matrix.os }}
